ts auto compilation on pnpm

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "Student-GradeBook",
+  "name": "student-gradebook",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc --outFile ./build/app.js ./src/app.ts && node ./build/app"
   },
   "keywords": [],
   "author": "",
